impl login_logout
