# docs/swagger.json
@@ -48,6 +48,23 @@
                 ],
                 "responses": {}
             }
+        },
+        "/admin_login/login_out": {
+            "get": {
+                "description": "管理员退出",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理员接口"
+                ],
+                "summary": "管理员退出",
+                "operationId": "/admin_login/login_out",
+                "responses": {}
+            }
         }
     },
     "definitions": {
